--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ main{
    display: inline-block;
    border-radius: 25px;
    overflow:hidden;
+ 
 
 }
 #images-Section img{
@@ -61,6 +62,24 @@ main{
     font-size: 20px;
     left: 300px;
 }
+#submitbtn{
+    background-color: #d6b0b1;
+    font-size: 20px;
+};
+ul li {
+    display: inline;
+    position: relative;
+    top: 10px;
+    /* left: 200px; */
+    margin-bottom: 0px;
+}
+#submitbtn1{
+    font-size: 20px;
+    position: relative;
+    left: 530px;
+    background-color: aquamarine;
+}
+
 footer{
     background-color: #d6b0b1;
  height: auto;
